--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   animation: gradient 15s ease infinite;
   height: 100vh;
   font-family: "Fira Sans", sans-serif;
+  overflow-y: hidden;
 }
 
 @keyframes gradient {
